--- a/Book-Store/Views/Shared/_Header.cshtml
+++ b/Book-Store/Views/Shared/_Header.cshtml
@@ -20,7 +20,7 @@
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown
+                            Manage
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
