--- a/Book-Store/Areas/Admin/Views/Category/Index.cshtml
+++ b/Book-Store/Areas/Admin/Views/Category/Index.cshtml
@@ -8,7 +8,10 @@
         <h2 class="text-primary">Category List</h2>
     </div>
     <div class="col-6 text-right">
-        <a class="btn btn-primary" asp-action="Upsert"><i class="fas fa-plus"></i> &nbsp; Create New Category</a>
+        <a class="btn btn-primary" asp-action="Upsert">
+            <i class="fas fa-plus"></i> &nbsp;
+            Create New Category
+        </a>
     </div>
 </div>
 
@@ -30,7 +33,10 @@
                     <a asp-action="Upsert" asp-route-id="@cal.Id" class="btn btn-success text-white" style="cursor:pointer">
                         <i class="fas fa-edit"></i>
                     </a> &nbsp; &nbsp;
-                    <a asp-action="Delete" asp-route-id="@cal.Id" class="btn btn-danger text-white" style="cursor:pointer">
+                    <a asp-action="Delete" asp-route-id="@cal.Id" class="btn btn-danger text-white"
+                       data-toggle="modal" data-id="@cal.Id"
+                       data-target="#delete-modal"
+                       style="cursor:pointer">
                         <i class="fas fa-trash-alt"></i>
                     </a>
                 </td>
@@ -47,4 +53,9 @@
         <i class="fas fa-trash-alt"></i>
     </a>
 </div>
+
+@{ 
+    var path = "/admin/category/delete/";
+}
+<partial name="_DeleteFormSubmit" model="@path" />
 
