--- a/Book-Store/Areas/Admin/Views/CoverType/Index.cshtml
+++ b/Book-Store/Areas/Admin/Views/CoverType/Index.cshtml
@@ -17,31 +17,33 @@
 
 <br />
 <div class="p-4 border rounded">
-    <table class="table table-striped table-bordered" style="width:100%">
+    <table id="covertype-table" class="table table-striped table-bordered" style="width:100%">
         <thead class="thead-dark">
             <tr class="table-info">
                 <th>Cover Type Name</th>
                 <th>Action</th>
             </tr>
         </thead>
-        @foreach (var ct in Model)
-        {
-            <tr>
-                <td>@ct.Name</td>
-                <td>
-                    &nbsp; &nbsp; &nbsp; &nbsp;
-                    <a asp-action="Upsert" asp-route-id="@ct.Id" class="btn btn-success text-white" style="cursor:pointer">
-                        <i class="fas fa-edit"></i>
-                    </a> &nbsp; &nbsp;
-                    <a asp-action="Delete" asp-route-id="@ct.Id" class="btn btn-danger text-white"
-                       data-toggle="modal" data-id="@ct.Id"
-                       data-target="#delete-modal"
-                       style="cursor:pointer">
-                        <i class="fas fa-trash-alt"></i>
-                    </a>
-                </td>
-            </tr>
-        }
+        <tbody>
+            @foreach (var ct in Model)
+            {
+                <tr>
+                    <td>@ct.Name</td>
+                    <td>
+                        &nbsp; &nbsp; &nbsp; &nbsp;
+                        <a asp-action="Upsert" asp-route-id="@ct.Id" class="btn btn-success text-white" style="cursor:pointer">
+                            <i class="fas fa-edit"></i>
+                        </a> &nbsp; &nbsp;
+                        <a asp-action="Delete" asp-route-id="@ct.Id" class="btn btn-danger text-white"
+                           data-toggle="modal" data-id="@ct.Id"
+                           data-target="#delete-modal"
+                           style="cursor:pointer">
+                            <i class="fas fa-trash-alt"></i>
+                        </a>
+                    </td>
+                </tr>
+            }
+        </tbody>
     </table>
 </div>
 
@@ -54,8 +56,15 @@
     </a>
 </div>
 
-@{ 
+@{
     var path = "/admin/covertype/delete/";
 }
 <partial name="_DeleteFormSubmit" model="@path" />
 
+@section Scripts{
+    <script>
+        $(function () {
+            $("#covertype-table").dataTable();
+        })
+    </script>
+}
