update product model

--- a/Book-Store/Views/Shared/_Footer.cshtml
+++ b/Book-Store/Views/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<footer class="border-top footer text-white-50 bg-primary">
     <div class="container">
-        &copy; @DateTime.Now.Year - BookStore
+        &copy; @DateTime.Now.Year - PhuocLeoCeo
     </div>
 </footer>
