--- a/Book-Store/Views/Shared/_Header.cshtml
+++ b/Book-Store/Views/Shared/_Header.cshtml
@@ -1,7 +1,7 @@
 ﻿<header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Book_Store</a>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Book Store</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -15,7 +15,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="" asp-action="">No Name</a>
+                        <a class="nav-link" asp-area="" asp-controller="" asp-action="">Privacy</a>
                     </li>
 
                     <li class="nav-item dropdown">
