--- a/Book-Store/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/Book-Store/Areas/Admin/Views/Product/Upsert.cshtml
@@ -129,14 +129,21 @@
                 </div>
             </div>
         </div>
+
+        @if (Model.Product.Id != 0)
+        {
+            <div class="col-3 offset-1 pt-4">
+                <img src="@Model.Product.ImageUrl" width="100%"
+                     style="border-radius:5px;border:1px solid #bbb9b9" />
+            </div>
+        }
     </div>
 </form>
 
 @section Scripts{
     <partial name="_ValidationScriptsPartial" />
 
-    <script src="https://cdn.tiny.cloud/1/9zve9wulx4kid9vds62712nuhh29ifgp2uajfu2tbsb3m00u/tinymce/5/tinymce.min.js"
-            referrerpolicy="origin"></script>
+    <script src="https://cdn.tiny.cloud/1/9zve9wulx4kid9vds62712nuhh29ifgp2uajfu2tbsb3m00u/tinymce/5/tinymce.min.js"></script>
 
     <script>
         tinymce.init({
