--- a/Book-Store/Areas/Customer/Views/_ViewImports.cshtml
+++ b/Book-Store/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Book_Store
+@using Book_Store.Models
 @using Book_Store.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
