--- a/Book-Store/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/Book-Store/Areas/Admin/Views/Product/Upsert.cshtml
@@ -89,7 +89,7 @@
 
             <div class="form-group row">
                 <div class="col-4">
-                    Category
+                    Cover Type
                 </div>
                 <div class="col-8">
                     @Html.DropDownListFor(m => m.Product.CoverTypeId, Model.CoverTypeList, "-Select a Cover Type-",
