--- a/Book-Store/Areas/Admin/Views/Company/Upsert.cshtml
+++ b/Book-Store/Areas/Admin/Views/Company/Upsert.cshtml
@@ -80,7 +80,7 @@
                     <label asp-for="IsAuthorizedCompany"></label>
                 </div>
                 <div class="col-8">
-                    <input type="checkbox" asp-for="IsAuthorizedCompany"/>
+                    <input type="checkbox" asp-for="IsAuthorizedCompany" class="form-control"/>
                     <span asp-validation-for="IsAuthorizedCompany" class="text-danger"></span>
                 </div>
             </div>
