--- a/Book-Store/Areas/Admin/Views/Company/Index.cshtml
+++ b/Book-Store/Areas/Admin/Views/Company/Index.cshtml
@@ -38,7 +38,7 @@
                 <td>@cp.District</td>
                 <td>@cp.ProvinceOrCity</td>
                 <td>@cp.PhoneNumber</td>
-                <td><input type="checkbox" checked="@cp.IsAuthorizedCompany" readonly onclick="return false;"/></td>
+                <td style="text-align:center;"><input type="checkbox" checked="@cp.IsAuthorizedCompany" readonly onclick="return false;"/></td>
                 
                 <td>
                     &nbsp; &nbsp; &nbsp; &nbsp;
