--- a/Book-Store/Areas/Customer/Views/Home/Index.cshtml
+++ b/Book-Store/Areas/Customer/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Product>
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "PLC Book";
 }
 
 <div class="row pb-3 backgroundWhite">
