--- a/Book-Store/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Book-Store/Areas/Identity/Pages/Account/Register.cshtml
@@ -58,6 +58,20 @@
                 <input asp-for="Input.PostalCode" class="form-control" />
                 <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
             </div>
+            @if (User.IsInRole(SD.Role_Admin))
+            {
+                <div class="form-group">
+                    <label asp-for="Input.Role"></label>
+                    @Html.DropDownListFor(m => m.Input.Role, Model.Input.RoleList, "-Select a Role-",
+                   new { @class = "form-control" })
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Input.CompanyId"></label>
+                    @Html.DropDownListFor(m => m.Input.CompanyId, Model.Input.CompanyList, "-Select a Company-",
+                   new { @class = "form-control" })
+                </div>
+            }
 
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
