--- a/Book-Store/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Book-Store/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Book_Store.Areas.Identity
 @using Book_Store.Areas.Identity.Pages
+@using Book_Store.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
