--- a/Book-Store/Areas/Admin/Views/Company/Index.cshtml
+++ b/Book-Store/Areas/Admin/Views/Company/Index.cshtml
@@ -24,7 +24,7 @@
                 <th>Street Address</th>
                 <th>District</th>
                 <th>Province / City</th>
-                <th>Phone Number</th>
+                <th>Phone</th>
                 <th>Authorized</th>
                 <th>Action</th>
             </tr>
