--- a/Book-Store/Views/_ViewImports.cshtml
+++ b/Book-Store/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Book_Store
 @using Book_Store.Models.ViewModels
+@using Book_Store.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.AspNetCore.Identity 
