--- a/Book-Store/Areas/Customer/Views/Home/Details.cshtml
+++ b/Book-Store/Areas/Customer/Views/Home/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@model ShoppingCart
-@{ 
+@{
     ViewData["Title"] = "Product Detail";
 }
 <form method="post">
@@ -25,7 +25,7 @@
                                 <h5 class="text-muted">ISBN : @Model.Product.ISBN</h5>
                             </div>
                             <div class="row pl-2">
-                                <h5 class="text-muted pb-2">List Price: <strike>@Model.Product.ListPrice.ToString("c")</strike></h5>
+                                <h5 class="text-muted pb-2">List Price: <strike>@(Model.Product.ListPrice + " VND")</strike></h5>
                             </div>
                             <br />
                             <div class="row text-center pl-2" style="color:maroon; font-weight:bold">
@@ -33,7 +33,7 @@
                                     <div>Price</div>
                                 </div>
                                 <div class="p-1 col-2 bg-secondary">
-                                    <div>@Model.Product.Price.ToString("c")</div>
+                                    <div>@(Model.Product.Price + " VND")</div>
                                 </div>
                             </div>
                             <br />
@@ -47,7 +47,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-lg-3 offset-lg-1 text-center">
-                            <img src="@Model.Product.ImageUrl" width="100%" class="rounded" />
+                            <img src="@Model.Product.ImageUrl" style="width:100%" class="rounded" />
                         </div>
                     </div>
                 </div>
