Shopping Cart Count

--- a/Book-Store/Views/Shared/_Header.cshtml
+++ b/Book-Store/Views/Shared/_Header.cshtml
@@ -42,6 +42,25 @@
                             </div>
                         </li>
                     }
+                    @if (HttpContextAccessor.HttpContext.Session.GetInt32(SD.SessionShoppingCart) != null)
+                    {
+                        <li style="color:white;">
+                            <a asp-area="Customer" asp-controller="Cart" asp-action="Index" class="nav-link">
+                                @{
+                                    var count = HttpContextAccessor.HttpContext.Session.GetInt32(SD.SessionShoppingCart);
+                                }
+                                <i class="fas fa-shopping-cart"></i>&nbsp; (@count)
+                            </a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li style="color:white;">
+                            <a href="#" class="nav-link">
+                                <i class="fas fa-shopping-cart"></i>&nbsp; (0)
+                            </a>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
