--- a/Book-Store/Views/_ViewImports.cshtml
+++ b/Book-Store/Views/_ViewImports.cshtml
@@ -3,3 +3,5 @@
 @using Book_Store.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Microsoft.AspNetCore.Identity 
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
