Edit Currency Unit

--- a/Book-Store/Areas/Customer/Views/Cart/Index.cshtml
+++ b/Book-Store/Areas/Customer/Views/Cart/Index.cshtml
@@ -61,8 +61,8 @@
                             <div class="col-12 col-md-6 offset-md-6 col-lg-4 offset-lg-8 pr-4">
                                 <ul class="list-group">
                                     <li class="list-group-item d-flex justify-content-between bg-light">
-                                        <span class="text-info"> Total (USD)</span>
-                                        <strong class="text-info">VNĐ  <span id="txtOrderTotal">@Model.OrderHeader.OrderTotal</span></strong>
+                                        <span class="text-info"> Total (VNĐ)</span>
+                                        <strong class="text-info"><span id="txtOrderTotal">@Model.OrderHeader.OrderTotal</span></strong>
                                     </li>
                                 </ul>
                             </div>
