--- a/Book-Store/Areas/Customer/Views/Cart/Index.cshtml
+++ b/Book-Store/Areas/Customer/Views/Cart/Index.cshtml
@@ -37,18 +37,18 @@
                                     </div>
                                     <div class="col-6 col-sm-4 col-lg-6">
                                         <div class="float-right mx-1">
-                                            <a asp-action="plus" asp-route-cartId="@item.Id" class="btn btn-primary">
+                                            <a asp-action="Plus" asp-route-cartId="@item.Id" class="btn btn-primary">
                                                 <i class="fas fa-plus"></i>
                                             </a>
                                         </div>
                                         <div class="float-right mx-1">
-                                            <a asp-action="minus" asp-route-cartId="@item.Id" class="btn btn-danger">
+                                            <a asp-action="Minus" asp-route-cartId="@item.Id" class="btn btn-danger">
                                                 <i class="fas fa-minus"></i>
                                             </a>
                                         </div>
                                     </div>
                                     <div class="col-2 col-sm-4 col-lg-2 text-right">
-                                        <a asp-action="remove" asp-route-cartId="@item.Id" class="btn btn-danger">
+                                        <a asp-action="Remove" asp-route-cartId="@item.Id" class="btn btn-danger">
                                             <i class="fas fa-trash"></i>
                                         </a>
                                     </div>
