--- a/Book-Store/Areas/Customer/Views/Cart/Index.cshtml
+++ b/Book-Store/Areas/Customer/Views/Cart/Index.cshtml
@@ -33,7 +33,7 @@
                                 </div>
                                 <div class="col-12 text-sm-center col-lg-5 text-lg-right row">
                                     <div class="col-4 text-md-right" style="padding-top:5px;">
-                                        <h6><strong>@item.Price VNĐ<span class="text-muted"> x </span> @item.Count </strong></h6>
+                                        <h6><strong>@(item.Price/1000 + "K") VNĐ<span class="text-muted"> x </span> @item.Count </strong></h6>
                                     </div>
                                     <div class="col-6 col-sm-4 col-lg-6">
                                         <div class="float-right mx-1">
